# vl-mcp

./: README.md  mcp_config.json  pyproject.toml  requirements.txt  setup.py
mcp_server/: __init__.py  server.py
